Spacing Issue Fixed

--- a/src/Screens/Home/Style.css
+++ b/src/Screens/Home/Style.css
@@ -556,7 +556,9 @@ section.sdk {
 }
 
 
-
+.audits {
+    margin: 90px 0 0 0;
+}
 
 
 
